*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_classpath.htm
@@ -28,7 +28,7 @@ This section does not cover the Java runtime path which can be defined separatel
 <h3>
 Changing the build path</h3>
 <P>
-You can programmatically change a project's build path using <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setRawClasspath(org.eclipse.jdt.core.IClasspathEntry[], org.eclipse.core.runtime.IProgressMonitor)>setRawClasspath">
+You can programmatically change a project's build path using <b><a href="../reference/api/org/eclipse/jdt/core/IJavaProject.html#setRawClasspath(org.eclipse.jdt.core.IClasspathEntry[], org.eclipse.core.runtime.IProgressMonitor)">
 setRawClasspath</a></b> on the corresponding project's Java element, for example:
 
 	<font color='#4444CC'><pre>
