--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -98,7 +98,7 @@ can changed according to the default locale. The contants defined in <b><a href=
   Working copies can be reconciled with problem detection if a <b><a href="../reference/api/org/eclipse/jdt/core/IProblemRequestor.html">
  IProblemRequestor</a>
 </b> has been supplied for the working copy creation. To achieve this, you 
-can use the method <b><a href="../reference/api/org/eclipse/jdt/core/IWorkingCopy.html#reconcile%28boolean,%20org.eclipse.core.runtime.IProgressMonitor%29">
+can use the method <b><a href="../reference/api/org/eclipse/jdt/core/IWorkingCopy.html#reconcile(boolean, org.eclipse.core.runtime.IProgressMonitor)">
  reconcile(boolean forceProblemDetection, IProgressMonitor monitor)</a>
 </b>. Here is an example: <font color="#4444cc">
 <pre>   unit.getBuffer().setContents("public class X extends Zork {}");<br>   IProblemRequestor problemRequestor = new IProblemRequestor() {<br>      public void acceptProblem(IProblem problem) {}<br>      public void beginReporting() {}<br>      public void endReporting() {}<br>      public boolean isActive() {return true;}<br>   };<br>   IJavaElement workingCopy = unit.getWorkingCopy(null, null, problemRequestor);<br>   ((IWorkingCopy)workingCopy).reconcile(true, null);<br></pre>
