--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -28,8 +28,8 @@ Creating a java search pattern
 </h4>
 <p>
 A search pattern defines how search results are found. You can either create a search pattern from a java element (see
-<b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern%28org.eclipse.jdt.core.IJavaElement,%20int%29">createSearchPattern(IJavaElement, int)</a></b>) 
-or from a string (see <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern%28java.lang.String,%20int,%20int,%20boolean%29">createSearchPattern(String, int, int, boolean)</a></b>.)
+<b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(org.eclipse.jdt.core.IJavaElement, int)">createSearchPattern(IJavaElement, int)</a></b>) 
+or from a string (see <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(java.lang.String, int, int, boolean)">createSearchPattern(String, int, int, boolean)</a></b>.)
 The last method supports wildcards (i.e. '*') and can be used to widen the search results.</p>
 <p>
 For example, creating a search pattern for searching for references to a given method is done as follows:</p>
@@ -52,7 +52,7 @@ The following search patterns are supported:
 <li>Field read accesses</li>
 <li>Method (and constructor) references</li>
 <li>Combinations of the above patterns using the OR pattern (see
-<b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createOrSearchPattern%28org.eclipse.jdt.core.search.ISearchPattern,%20org.eclipse.jdt.core.search.ISearchPattern%29">createOrSearchPattern</a></b>)</li>
+<b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createOrSearchPattern(org.eclipse.jdt.core.search.ISearchPattern, org.eclipse.jdt.core.search.ISearchPattern)">createOrSearchPattern</a></b>)</li>
 </ul>
 
 
@@ -62,8 +62,8 @@ Creating a java search scope
 <p>
 If you are interested in search results in a given project or even in a given package, or if you know that search results
 can be only in a hierarchy of a given type, you can create the appropriate search scope using 
-<b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createJavaSearchScope%28org.eclipse.jdt.core.IJavaElement%5B%5D%29">createJavaSearchScope(IJavaElement[])</a></b>
-or <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createHierarchyScope%28org.eclipse.jdt.core.IType%29">createHierarchyScope(IType)</a></b>.</p>
+<b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createJavaSearchScope(org.eclipse.jdt.core.IJavaElement[])">createJavaSearchScope(IJavaElement[])</a></b>
+or <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createHierarchyScope(org.eclipse.jdt.core.IType)">createHierarchyScope(IType)</a></b>.</p>
 <p>
 For example, creating a search scope on a given package is done as follows:</p>
 <font color="#4444cc"><pre>    // Get the package<br>    IPackageFragment pkg = ...;<br><br>    // Create search scope<br>    IJavaSearchScope scope = SearchEngine.createJavaSearchScope(new IJavaElement[] {pkg});<br></pre></font>
@@ -83,18 +83,18 @@ you can start a search query as follows: </p>
 <font color="#4444cc"><pre>    // Get the search pattern<br>    ISearchPattern pattern = ...;<br>    <br>    // Get the search scope<br>    IJavaSearchScope scope = ...;<br>    <br>    // Get the search result collector<br>    IJavaSearchResultCollector collector = ...;<br>    <br>    // Search<br>    SearchEngine searchEngine = new SearchEngine();<br>    searchEngine.search(ResourcesPlugin.getWorkspace(), pattern, scope, collector);<br></pre></font>
 <p>
 A notification that the search starts is sent to your search result collector using the
-<b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html#aboutToStart%28%29">aboutToStart</a></b>
+<b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html#aboutToStart()">aboutToStart</a></b>
 method. &nbsp;Then, each search result is reported using the 
-<b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html#accept%28org.eclipse.core.resources.IResource,%20int,%20int,%20org.eclipse.jdt.core.IJavaElement,%20int%29">accept</a></b>
+<b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html#accept(org.eclipse.core.resources.IResource, int, int, org.eclipse.jdt.core.IJavaElement, int)">accept</a></b>
 method. Finally 
-<b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html#done%28%29">done</a></b>
+<b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html#done()">done</a></b>
 indicates that the search has ended.</p>
 
 <h3>
 Collecting search results</h3>
 <p>
 Search results are reported using the 
-<b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html#accept%28org.eclipse.core.resources.IResource,%20int,%20int,%20org.eclipse.jdt.core.IJavaElement,%20int%29">accept</a></b>
+<b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html#accept(org.eclipse.core.resources.IResource, int, int, org.eclipse.jdt.core.IJavaElement, int)">accept</a></b>
 method. Paragraphs below detail each argument to this method. </p>
 
 <h4>
