--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_int_elements.htm
@@ -238,7 +238,7 @@ The  figure below shows how these elements are represented in the Packages
 <h3> Java elements and their resources</h3>
 <p> Many of the Java elements correspond to generic resources in the workspace.&nbsp;
   When you want to create Java elements from a generic   resource the class
-  <a href="file:///D:/data/devel/Workspaces/Eclipse/plugins/org.eclipse.jdt.doc.isv/reference/api/org/eclipse/jdt/core/JavaCore.html"><b>
+  <a href="../reference/api/org/eclipse/jdt/core/JavaCore.html"><b>
         JavaCore</b></a>
          is the best starting point. The following code snippet shows how 
 to  get Java elements from  their corresponding resources.</p>
