--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-169.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-169.htm
@@ -8,8 +8,7 @@
 
 </HEAD>
 <BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Renaming a fields</H1>
+<H1 CLASS="Head"> Renaming a field</H1>
 <P>&nbsp;<br>
 
 <img src = ../ngibmcpy.gif width="195" height="12">
