--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-174.htm
@@ -29,5 +29,14 @@
 <p><strong>Note:</strong> this setting affects only the way the source is presented.To 
   change the encoding that the Java editor uses to save files, use preferences 
   on <strong>Window &gt; Preferences &gt; Workbench &gt; Editors</strong>.</p>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
+<p>&nbsp;</p>
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+<p><a href="../concepts/concepts-7.htm">Java editor</a><br>
+  &nbsp;</p>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="tasks-54.htm">Using the Java editor</a><br>
+</p>
+  <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a></p>
 </body></html>
