--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-176.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-176.htm
@@ -42,6 +42,19 @@
 <p>Pressing <b>Ctrl+Shift+Arrow Down</b> or selecting <b>Edit &gt; Expands Selection 
   To &gt; Restore Last Selection </b>from the menu bar lets you restore the previous 
   structured selection.</p>
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+<p><a href="../concepts/concepts-7.htm">Java editor</a><br>
+  &nbsp;</p>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="tasks-54.htm">Using the Java editor</a><br>
+  <a href="tasks-179.htm">Using Surround with Try/Catch </a></p>
+<p> <a href="tasks-87.htm">Extracting a method</a><br>
+  <a href="tasks-159.htm">Extracting a local variable</a><br>
+  <a href="tasks-161.htm">Inlining a local variable</a><br>
+  <a href="tasks-164.htm">Replacing a local variable with a query</a><br>
+</p>
 <p></p>
 <p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
