--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
@@ -36,5 +36,14 @@
     this fact and asking if you want to create a 'catch' block for java.lang.RuntimeException.<br>
   </li>
 </ul>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved."></a></p>
+<p>&nbsp;</p>
+<p class=para><img width=159 height=27 id="_x0000_i1025"
+src="../images/ngrelc.gif" alt="Related concepts" border=0></p>
+<p><a href="../concepts/concepts-7.htm">Java editor</a><br>
+  &nbsp;</p>
+<p><img border=0 width=159 height=27 id="_x0000_i1026"
+src="../images/ngrelt.gif" alt="Related tasks"></p>
+<p><a href="tasks-54.htm">Using the Java editor</a></p>
+<p> <a href="tasks-176.htm">Using Structured Selection</a></p>
+  <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border=0></a></p>
 </body></html>
