added link to "restoring deleted resource from local history' link; added to 'Applying a patch' section

--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-12.htm
@@ -57,8 +57,10 @@ Creating a file</a><a href="../tasks/tasks-53.htm"><br>
 </a><a href="../tasks/tasks-47.htm">Closing projects</a><a href="../tasks/tasks-49.htm"><br>
 Viewing resource properties</a><a href="../tasks/tasks-46ag.htm"><br>
 Finding a resource quickly</a><a href="../tasks/tasks-63cg.htm"><br>
-Copying resources</a><a href="../tasks/tasks-63.htm"><br>
-Moving resources</a></p>
+Copying resources</a><br>
+<a href="../tasks/tasks-63.htm">Moving resources</a><br>
+<a href="../tasks/tasks-68.htm">Comparing resources</a>
+</p>
 
 <p>&nbsp;<br>
 <a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0" width="324" height="14"></a>
