Fixed broken links

--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbuildcp.htm
@@ -19,8 +19,8 @@ Classpath variable</a>
 <p dir="Ltr">
 </p>
 
-<p dir="Ltr"><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-113.htm">Adding a JAR file to the build 
-  path</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-112.htm">Adding a library folder to the build path</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-106.htm">Building a Java program</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-108.htm">Building automatically</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-109.htm">Building manually</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-111.htm">Viewing and editing a project's build path</a><br><a href="http://localhost/org.eclipse.jdt.doc.user/tasks/tasks-110.htm">Working with build paths</a></p>
+<p dir="Ltr"><a href="../tasks/tasks-113.htm">Adding a JAR file to the build 
+  path</a><br><a href="../tasks/tasks-112.htm">Adding a library folder to the build path</a><br><a href="../tasks/tasks-106.htm">Building a Java program</a><br><a href="../tasks/tasks-108.htm">Building automatically</a><br><a href="../tasks/tasks-109.htm">Building manually</a><br><a href="../tasks/tasks-111.htm">Viewing and editing a project's build path</a><br><a href="../tasks/tasks-110.htm">Working with build paths</a></p>
 <p></p>
 
 
