--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-12.htm
@@ -7,22 +7,20 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Creating a new Java project</h1>
-  <p class=para>You can organize Java projects in two different ways. </p>
-  <ul type=disc>
-    <li class=MsoNormal style='     '>Use the project as the container of packages. 
-      <br>
+  <p>You can organize Java projects in two different ways. </p>
+  <ul>
+    <li>Use the project as the container of packages. 
       In this organization, all Java packages are created directly inside the 
       project. This is the selected organization by default. The generated CLASS 
       files are stored along with the JAVA source files.</li>
-    <li class=MsoNormal style='     '>Use source folders as the container for 
-      packages. <br>
-      In this project organization, packages are not created directly inside the 
+    <li>Use source folders as the container for 
+      packages. In this project organization, packages are not created directly inside the 
       project but in source folders. You create source folders as children of 
       the project and create your packages inside these source folders. </li>
   </ul>
-  <p class=para>The default organization for new projects can be changed on the 
+  <p>The default organization for new projects can be changed on the 
     preference pages (<b>Window</b> &gt; <b>Preferences</b> &gt; <b>Java &gt; 
-    New Project</b>).</p>
+    New Project</b>).</p><br>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-3.htm">Java projects</a></p>
