--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-21.htm
@@ -37,7 +37,7 @@
     the right pane, select <b>Interface</b>. </p>
   <p>or</p>
   <p>&nbsp;&nbsp;&nbsp; Select the container where you want the new package to 
-    reside. Then, select from the menu bar <b>File</b> &gt; <b>New</b> &gt; <b>Interface</b> 
+    reside. Then, from the menu bar select <b>File</b> &gt; <b>New</b> &gt; <b>Interface</b> 
   </p>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
