--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-23.htm
@@ -20,10 +20,10 @@
     appears in the <span class=label><b>Source Folder</b></span> field as the 
     container for the new interface.</p>
   <p class=para> 3.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-    </span> In the <span class=label><b>Package</b></span> field, type or click 
-    <span class=label><b>Browse</b></span> to select the package where you want 
-    the new interface to reside. Leave this field empty to indicate that you want 
-    the new interface to be created in the default package.</p>
+    </span> In the <span class=label><b>Package</b></span> field, type a name 
+    or click <span class=label><b>Browse</b></span> to select the package where 
+    you want the new interface to reside. If you want the new interface to be created in the 
+	default package, leave this field empty.</p>
   <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Clear the <span class=label><b>Enclosing Type</b></span> check box. 
   </p>
