--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-26.htm
@@ -8,8 +8,9 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Creating a new source folder</h1>
-  <p class=para>In a project that uses source folders, you can create a new folder 
+  <p>In a project that uses source folders, you can create a new folder 
     to contain Java source code.</p>
+	
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> In the Package Explorer, select the project where you want the 
     new source folder to reside. </p>
