--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-14.htm
@@ -8,14 +8,18 @@
 <body bgcolor=#FFFFFF lang=EN-US link=blue vlink=blue>
 <div class=Section1> 
   <h1>Creating a Java project with source folders</h1>
-  <p class=para>For larger projects, create a project with source folders.</p>
-  <p class=para><b>Note</b>: When using source folders, non-Java resources are 
-    copied to the output folder by the Java builder. If you have non-Java resources 
-    (documentation, for example) that should not be copied into the output folder, 
-    you can create an ordinary folder and store the resources there. You can also 
-    use the preference page <b>Window &gt; Preferences &gt; Java &gt; Compiler 
-    &gt; Other</b> to specify a list of resources that will not be automatically 
-    copied to the output folder.</p>
+  <p>For larger projects, create a project with source folders.</p>
+</div>
+<blockquote> 
+  <div class=Section1><b>Note</b>: When using source folders, non-Java resources 
+    are copied to the output folder by the Java builder. If you have non-Java 
+    resources (documentation, for example) that should not be copied into the 
+    output folder, you can create an ordinary folder and store the resources there. 
+    You can also use the preferences page <b>Window &gt; Preferences &gt; Java 
+    &gt; Compiler &gt; Other</b> to specify a list of resources that will not 
+    be automatically copied to the output folder.</div>
+</blockquote>
+<div class=Section1> 
   <p class=para> 1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> From the main workbench window, click <b>File</b> &gt; <b>New</b> 
     &gt; <b>Project</b>. The New Project wizard opens.</p>
@@ -28,8 +32,9 @@
   <p class=para> 4.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> Check or clear the <b>Use default</b> check box to indicate whether 
     you want to use the default location for your new project. If you clear this 
-    check box, then type or click <b>Browse</b> to select a location for the project. 
-    Click <span class=label><b>Next</b></span>. The Java Settings Page opens.</p>
+    check box, then type a path or click <b>Browse</b> to select a location for 
+    the project. Click <span class=label><b>Next</b></span>. The Java Settings 
+    Page opens.</p>
   <p class=para> 5.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     </span> On the <b>Source</b> tab, select the <b>Use source folders contained 
     in the project </b>radio button to use project subfolders as source containers.</p>
@@ -54,11 +59,15 @@
     project.</p>
   <p class=para> 11.<span style='font:7.0pt "Times New Roman"'>&nbsp; </span> 
     Click <span class=label><b>Finish</b></span> when you are done.</p>
-  <p class=para><b>Note:</b> When you are using CVS as your repository then it 
-    is recommended that you create a .cvsignore file inside the project. In this 
-    file, add a line with the name of the output folder (&quot;bin&quot; for example). 
-    Adding the output folder in the .cvsignore file ensures that the CVS versioning 
-    support ignores the output folder in versioning operations.</p>
+</div>
+<blockquote>
+  <div class=Section1><b>Note:</b> When you are using CVS as your repository, 
+    it is recommended that you create a .cvsignore file inside the project. In 
+    this file, add a line with the name of the output folder (&quot;bin&quot; 
+    for example). Adding the output folder in the .cvsignore file ensures that 
+    the CVS versioning support ignores the output folder in versioning operations.</div>
+</blockquote>
+<div class=Section1>
   <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
   <p><a href="../concepts/concepts-3.htm">Java projects</a><br>
@@ -75,6 +84,6 @@ src="../images/ngrelt.gif" alt="Related tasks"></p>
     <a href="../tasks/tasks-149.htm">Creating a Java scrapbook page</a><br>
     <br>
     <img border=0 id="_x0000_i1027" src="../images/ngibmcpy.gif"></p>
-  </div>
+</div>
 </body>
 </html>
