--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-15.htm
@@ -12,8 +12,7 @@
 
 <h1>Creating a new Java package</h1>
 
-<p class=para>To create new Java packages in the Package Explorer or the
-Package Explorer:</p>
+  <p class=para>To create new Java packages in the Package Explorer:</p>
 
 <p class=para style='margin-left:.5in;text-indent:-.25in;mso-list:l0 level1 lfo1;
 tab-stops:list .5in'><![if !supportLists]>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -44,8 +43,8 @@ tab-stops:list .5in'><![if !supportLists]>5.<span style='font:7.0pt "Times New R
 </span><![endif]>Click <span class=label><b>Finish</b></span> when you are
 done.</p>
 
-<p class=para><b>Note:</b> the default (unnamed) package always exist and does
-not need to be created.</p>
+  <p class=para><b>Note:</b> the default (unnamed) package always exists and does 
+    not need to be created.</p>
 
 <p><img width=159 height=27 id="_x0000_i1025" src="../images/ngrelc.gif"
 alt="Related concepts" border=0></p>
