Fixed broken links

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_render.html
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_render.html
@@ -72,7 +72,7 @@ elements using the standard JFace viewer API (see update methods on StructuredVi
    <li><code>ProblemsLabelDecorator</code>: the client should listen to changes 
   notified by the decorator via a <a href="../reference/api/org/eclipse/jdt/ui/ProblemsLabelDecorator.ProblemsLabelChangedEvent.html">
         ProblemsLabelChangedEvent</a>
-         (see also <a href="../reference/api/org/eclipse/jdt/ui/ProblemsLabelDecorator.html#addListener%28org.eclipse.jface.viewers.ILabelProviderListener%29">
+         (see also <a href="../reference/api/org/eclipse/jdt/ui/ProblemsLabelDecorator.html#addListener(org.eclipse.jface.viewers.ILabelProviderListener)">
         ProblemsLabelDecorator.addListener</a>
         ). Since the marker model is resource based the listener has to map 
  the   resource notifications to its underlying data model. For an example 
