--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_search.htm
@@ -14,8 +14,8 @@ for java elements, such as method references, field declarations, implementors
 of an interface, etc. </p>
 <p>
 The entry point for java search is the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html">SearchEngine</a></b> class. Factory methods on this class, such
-as <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern%28org.eclipse.jdt.core.IJavaElement,%20int%29">createSearchPattern</a></b> (creates
-a search pattern) or <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createJavaSearchScope%28org.eclipse.jdt.core.IJavaElement%5B%5D,%20boolean%29">createJavaSearchScope</a></b> (creates a java search scope) are used by the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#search%28org.eclipse.core.resources.IWorkspace,%20org.eclipse.jdt.core.search.ISearchPattern,%20org.eclipse.jdt.core.search.IJavaSearchScope,%20org.eclipse.jdt.core.search.IJavaSearchResultCollector%29">search</a></b>
+as <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createSearchPattern(org.eclipse.jdt.core.IJavaElement,%20int)">createSearchPattern</a></b> (creates
+a search pattern) or <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#createJavaSearchScope(org.eclipse.jdt.core.IJavaElement%5B%5D,%20boolean)">createJavaSearchScope</a></b> (creates a java search scope) are used by the <b><a href="../reference/api/org/eclipse/jdt/core/search/SearchEngine.html#search(org.eclipse.core.resources.IWorkspace,%20org.eclipse.jdt.core.search.ISearchPattern,%20org.eclipse.jdt.core.search.IJavaSearchScope,%20org.eclipse.jdt.core.search.IJavaSearchResultCollector)">search</a></b>
 method. &nbsp;This method reports results to an  <b><a href="../reference/api/org/eclipse/jdt/core/search/IJavaSearchResultCollector.html">IJavaSearchResultCollector</a></b> which you must implement. </p>
 
 <h3>
