*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
+++ b/bundles/org.eclipse.jdt.doc.isv/guide/jdt_api_compile.htm
@@ -101,10 +101,8 @@ can changed according to the default locale. The contants defined in <b><a href=
 can use the <b><a href="../reference/api/org/eclipse/jdt/core/IWorkingCopy.html#reconcile(boolean, org.eclipse.core.runtime.IProgressMonitor)">
  reconcile</a></b> method. Here is an example: <font color="#4444cc">
 <pre>
-  ICompilationUnit unit;
-  IWorkingCopy workingCopy;
   try {
-    unit = ..; // get some compilation unit
+    ICompilationUnit unit = ..; // get some compilation unit
 			
     // create requestor for accumulating discovered problems
     IProblemRequestor problemRequestor = new IProblemRequestor() {
@@ -117,7 +115,7 @@ can use the <b><a href="../reference/api/org/eclipse/jdt/core/IWorkingCopy.html#
     };
     
     // use working copy to hold source with error
-    workingCopy = (IWorkingCopy)unit.getWorkingCopy(null, null, problemRequestor);
+    IWorkingCopy workingCopy = (IWorkingCopy)unit.getWorkingCopy(null, null, problemRequestor);
     ((IOpenable)workingCopy).getBuffer().setContents("public class X extends Zork {}");
 
 	// trigger reconciliation			
